--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!--bootstrap csss-->
 <title>Code Spy</title>
    
-  <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/Dark.css">
+  <link rel="stylesheet" href="/spy/style.css">
+    <link rel="stylesheet" href="/spy/Dark.css">
   <!-- Boxicons CDN Link -->
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
