--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <span class="tooltip">Home</span>
       </li>
       <li>
-        <a href="/about.html">
+        <a href="/spy/about.html">
           <i class='bx bx-user'></i>
           <span class="links_name">About</span>
         </a>
