--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ List of programming articles to Improve Your Coding Skills,
             <h3 class="info"> <i class="fas fa-phone"></i>contact <i class="fas fa-user"></i>us </h3>
             <a href="/contact.html" class="title">Contact Us</a>
             <p>If you have any doubt or suggestions regarding my posts please let me know.if I can be of assistance, please do not hesitate to contact me.</p>
-            <a href="#" class="btn">Contact Us</a>
+            <a href="/spy/contact.html" class="btn">Contact Us</a>
           </div>
         </div>
 
@@ -179,7 +179,7 @@ List of programming articles to Improve Your Coding Skills,
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <!-- custom js file link  -->
-  <script src="/script.js"></script>
+  <script src="/spy/script.js"></script>
   <script>
     const typedTextSpan = document.querySelector(".typed-text");
     const cursorSpan = document.querySelector(".cursor");
