--- a/contact.html
+++ b/contact.html
@@ -279,7 +279,7 @@ opacity: 0;
               
          
          <div class="form-row">
-           <div class="input-data textarea"  
+           <div class="input-data textarea"> 
              <textarea rows="8" cols="80" name="message" required></textarea>
              <br />
              <div class="underline"></div>
