--- a/resources.html
+++ b/resources.html
@@ -101,7 +101,7 @@
           <div class="content">
             <h3 class="info"> <i class="fas fa-user"></i> by, admin <i class="fas fa-calendar"></i> 3rd jun, 2020 </h3>
             <a href="#" class="title">C Programming</a>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum in molestias deleniti fugit excepturi atque cum animi harum distinctio et.</p>
+            <p>C (/ˈsiː/, as in the letter c) is a general-purpose, procedural computer programming language supporting structured programming, lexical variable scope, and recursion, with a static type system</p>
             <a href="/spy/ctut1.html" class="btn">read more</a>
           </div>
         </div>
