--- a/ctut4.html
+++ b/ctut4.html
@@ -40,7 +40,7 @@
 <h2> Basic structure of the c program </h2>
 <br>
 <br>
-<h3><b>Our First C Program</b></h3>
+<h3><b>First C Program</b></h3>
 <p class="para"></p>
 <pre class="language-c"><code>// Hello world program in c
 #include &lt;stdio.h>
@@ -128,7 +128,7 @@ int main{
   </ul>
 </nav>
 
-<p>If you any have doubt,suggestion regarding this post or website then feel free to <a style="text-decoration: none" href="/contact.html">share with us</a>
+<p>If you any have doubt,suggestion regarding this post or website then feel free to <a style="text-decoration: none" href="/spy/contact.html">share with us</a>
 </p>
 
 
