--- a/about.html
+++ b/about.html
@@ -278,7 +278,7 @@
             <li><i class = "fab fa-github"></i></li>
             <li><i class = "fab fa-twitter"></i></li>
             <li><i class = "fab fa-linkedin"></i></li>
-            <li><i class = "fab fa-instagram"><a href="https://instagram.com/akh4re?utm_medium=copy_link"></a></i></li>
+            <li><a href="https://instagram.com/a_k_h_a_r_e_?utm_medium=copy_link"><i class = "fab fa-instagram"></i></a></li>
           </ul>
         </div>
       </div>
