--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   
-  <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
+  <!--<About>About Us</About>-->
   <title>Code Spy</title>
   <link rel="stylesheet" href="/spy/style.css">
    <link rel="stylesheet" href="/spy/Dark.css">
