--- a/dsa1.html
+++ b/dsa1.html
@@ -20,16 +20,14 @@
     <div id="menu" class="fas fa-bars"></div>
     <nav class="pnavbar">
       <a href="/index.html">Home</a>
-      <a href="/dsa2.html">C Programming Basic</a>
-      <a href="/dsa3.html"> Datatypes In C</a>
-      <a href="/dsa4.html">Frist C Program</a>
-      <a href="/dsa5.html">Operators</a>
+      <a href="/dsa2.html">Space Complexity</a>
+      <a href="/dsa3.html">Time Complexity</a>
   
     </nav>
     <div id="theme-toggler" class="fas fa-moon"></div>
   </header>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#0099ff" fill-opacity="0.5" d="M0,256L30,224C60,192,120,128,180,117.3C240,107,300,149,360,181.3C420,213,480,235,540,240C600,245,660,235,720,202.7C780,171,840,117,900,85.3C960,53,1020,43,1080,64C1140,85,1200,139,1260,165.3C1320,192,1380,192,1410,192L1440,192L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path>
+    <path fill="blue" fill-opacity="0.5" d="M0,256L30,224C60,192,120,128,180,117.3C240,107,300,149,360,181.3C420,213,480,235,540,240C600,245,660,235,720,202.7C780,171,840,117,900,85.3C960,53,1020,43,1080,64C1140,85,1200,139,1260,165.3C1320,192,1380,192,1410,192L1440,192L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path>
   </svg>
   <div class="container mt-5">
 <h2>Data Structure and Algorithms</h2><br />
@@ -66,8 +64,8 @@
 <p class="para">The performance of an algorithm is measured on the basis of following properties:</p>
 
 <ol>
-  <li><a href="dsa2.html" style="text-decoration: none">Space complexity</a></li>
-   <li><a href="dsa3.html" style="text-decoration: none;">Time Complexity</a></li>
+  <li><a href="/spy/dsa2.html" style="text-decoration: none">Space complexity</a></li>
+   <li><a href="/spy/dsa3.html" style="text-decoration: none;">Time Complexity</a><small> &nbsp;will added soon</small></li>
 </ol>
 
 <br /> <hr /><big><b>Other Technology</b></big><br /><p></p>
@@ -87,7 +85,7 @@
 </p>
 <p class="para">All the variables, functions and data structures are allocated memory into special memory segment is mainly divide into four different parts which are specifically allocated to different types of data defined in our program</p><br />
 <figure class="figure">
-  <img src="/memory_layout~3.png" class="figure-img img-fluid rounded" alt="loading...">
+  <img src="/spy/memory_layout~3.png" class="figure-img img-fluid rounded" alt="loading...">
   
 </figure>
 <p>
@@ -115,9 +113,9 @@ This is the portion of the object file or program's virtual address space that c
           <polyline points="17 6 23 6 23 12"></polyline>
         </svg> </div>
       <div class="px-4 flex">
-        <div class="text-primary"><a   href="/dsa3.html" style="text-decoration: none">Space Complexity</a></div>
+        <div class="text-primary"><a   href="/spy/dsa2.html" style="text-decoration: none">Space Complexity</a></div>
         <div class="text-success mt-2">Next</div>
-      </div> <a href="/dsa2.html" class="text-muted" data-abc="true"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right">
+      </div> <a href="/spy/dsa2.html" class="text-muted" data-abc="true"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right">
           <line x1="5" y1="12" x2="19" y2="12"></line>
           <polyline points="12 5 19 12 12 19"></polyline>
         </svg> </a>
@@ -132,7 +130,7 @@ This is the portion of the object file or program's virtual address space that c
     <nav aria-label="Page navigation example">
       <ul class="pagination">
        
-        <li class="page-item"><a class="page-link" href="/dsa2.html">Next <span aria-hidden="true">&raquo;</span></a></li>
+        <li class="page-item"><a class="page-link" href="/spy/dsa2.html">Next <span aria-hidden="true">&raquo;</span></a></li>
       </ul>
     </nav>
   </div>
@@ -142,7 +140,7 @@ This is the portion of the object file or program's virtual address space that c
   <!--bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!-- custom js file link  -->
-  <script src="/cjs.js"></script>
+  <script src="/spy/cjs.js"></script>
 </body>
 
 </html>
