--- a/resources.html
+++ b/resources.html
@@ -107,7 +107,21 @@
         </div>
  
     </section>
-  
+    <!-- adding dsa card-->
+  <section class="blog" id="blog">
+    
+      <div class="box-container">
+        <div class="box">
+          <img src="/spy/9.png" alt="">
+          <div class="content">
+            <h3 class="info"> <i class="fas fa-user"></i>on working<i class="fas fa-calendar"></i>updating</h3>
+            <a href="#" class="title">Data Structure & Algorithm</a>
+            <p>Data Structure are the way to arrange data. so that data items can be used efficiently in memory...An Algorithm is a finite set of instructions or logic, written in order, to accomplish a certain predefined task.... </p>
+            <a href="/spy/dsa1.html" class="btn">read more</a>
+          </div>
+        </div>
+ 
+    </section>
     <!-- blog section ends -->
     <!-- footer section  -->
     <div class="footer">Copyright© <span>2020-2021 </span> | all rights reserved!</div>
