--- a/dsa1.html
+++ b/dsa1.html
@@ -10,7 +10,7 @@
   <!--boootstrap css-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- custom css file link  -->
-  <link rel="stylesheet" href="/ccss.css">
+  <link rel="stylesheet" href="/spy/ccss.css">
 </head>
 <style type="text/css" media="all">
 </style>
