--- a/dsa1.html
+++ b/dsa1.html
@@ -19,10 +19,10 @@
   <header>
     <div id="menu" class="fas fa-bars"></div>
     <nav class="pnavbar">
-      <a href="/index.html">Home</a>
-      <a href="/dsa2.html">Space Complexity</a>
-      <a href="/dsa3.html">Time Complexity</a>
-  
+      <a href="/spy/index.html">Home</a>
+      <a href="/spy/dsa2.html">Space Complexity</a>
+      <a href="/spy/dsa3.html">Time Complexity</a>
+    <a href="/spy/contact.html">Contact Page</a>
     </nav>
     <div id="theme-toggler" class="fas fa-moon"></div>
   </header>
@@ -64,8 +64,8 @@
 <p class="para">The performance of an algorithm is measured on the basis of following properties:</p>
 
 <ol>
-  <li><a href="/spy/dsa2.html" style="text-decoration: none">Space complexity</a></li>
-   <li><a href="/spy/dsa3.html" style="text-decoration: none;">Time Complexity</a><small> &nbsp;will added soon</small></li>
+  <li><a href="/spy/dsa2.html" style="text-decoration: none; text-decoration-color: var(--main-color);">Space complexity</a></li>
+   <li><a href="/spy/dsa3.html" style="text-decoration: none; text-decoration-color: var(--main-color);">Time Complexity</a><small> &nbsp;will added soon</small></li>
 </ol>
 
 <br /> <hr /><big><b>Other Technology</b></big><br /><p></p>
