--- a/dsa1.html
+++ b/dsa1.html
@@ -64,8 +64,8 @@
 <p class="para">The performance of an algorithm is measured on the basis of following properties:</p>
 
 <ol>
-  <li><a href="/spy/dsa2.html" style="text-decoration: none; text-decoration-color: var(--main-color);">Space complexity</a></li>
-   <li><a href="/spy/dsa3.html" style="text-decoration: none; text-decoration-color: var(--main-color);">Time Complexity</a><small> &nbsp;will added soon</small></li>
+  <li>Space complexity</li>
+   <li>Time Complexity</li>
 </ol>
 
 <br /> <hr /><big><b>Other Technology</b></big><br /><p></p>
