--- a/resources.html
+++ b/resources.html
@@ -112,7 +112,7 @@
     
       <div class="box-container">
         <div class="box">
-          <img src="/spy/9.png" alt="">
+          <img src="..." alt="">
           <div class="content">
             <h3 class="info"> <i class="fas fa-user"></i>on working<i class="fas fa-calendar"></i>updating</h3>
             <a href="#" class="title">Data Structure & Algorithm</a>
