--- a/about.html
+++ b/about.html
@@ -241,15 +241,15 @@
       <li>
         <a href="#" id="theme-toggler">
           <i class='bx bx-cog'></i>
-          <span class="links_name">Setting</span>
+          <span class="links_name">Change Theme</span>
         </a>
-        <span class="tooltip">Setting</span>
+        <span class="tooltip">Theme Changed</span>
       </li>
       <li class="profile">
         <div class="profile-details">
           <!--<img src="profile.jpg" alt="profileImg">-->
           <div class="name_job">
-            <div class="name">Sparky</div>
+            <div class="name">Spidy</div>
             <div class="job">Student</div>
           </div>
         </div>
