--- a/contact.html
+++ b/contact.html
@@ -272,7 +272,7 @@ opacity: 0;
            <div class="input-data">
              <input type="text" required>
              <div class="underline"></div>
-             <label for="">Your Website</label>
+             <label for="">Your Website<small> please include https://</small></label>
            </div>
          </div>
          
