--- a/ctut2.html
+++ b/ctut2.html
@@ -212,7 +212,7 @@ character literals.</li>
   
   
   
-<div class="footer">created by <span> mr. web designer </span> | all rights reserved!</div>
+<div class="footer">Copyright <span>2020-2021 </span> | all rights reserved!</div>
   
   <!-- jquery cdn link  -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
