--- a/about.html
+++ b/about.html
@@ -277,8 +277,8 @@
           <ul class = "icons">
             <li><i class = "fab fa-github"></i></li>
             <li><i class = "fab fa-twitter"></i></li>
-            <li><i class = "fab fa-linkedin"></i></li>
-            <li><a href="https://instagram.com/a_k_h_a_r_e_?utm_medium=copy_link"><i class = "fab fa-instagram"></i></a></li>
+            <li><i class = "fab fa-whatsapp"></i></li>
+            <li><a text-decoration="none"; href="https://instagram.com/a_k_h_a_r_e_?utm_medium=copy_link"><i class = "fab fa-instagram"></i></a></li>
           </ul>
         </div>
       </div>
