--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@
               </div>
             </div>
 
-            <h2>Spidy<br></h2>
+            <h2>Lucifer<br></h2>
             <h3>Student</h3>
           </div>
 
