--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ List of programming articles to Improve Your Coding Skills,
     const typedTextSpan = document.querySelector(".typed-text");
     const cursorSpan = document.querySelector(".cursor");
   
-    const textArray = ["Welcome! Smile and the day will smile with you.","start slow and strong","never stop learning.","coding is not for clevers.","no one has 100% clarity of everything.", "every one is zero in starting.","learn from your mistakes.","Good code is its own best documentation."];
+    const textArray = ["Welcome! Smile and the day will smile with you.", "An investment in knowledge pays the best interest.", "Change is the end result of all true learning.", "The learning process continues until the day you die. ", "Education is not the filling of a pail, but the lighting of a fire.", "learn from your mistakes.", "Good code is its own best documentation."];
     const typingDelay = 190;
     const erasingDelay = 80;
     const newTextDelay = 2000; // Delay between current and next text
