--- a/resources.html
+++ b/resources.html
@@ -133,7 +133,7 @@
             <h3 class="info"> <i class="fas fa-user"></i>by, admin<i class="fas fa-calendar"></i>5th feb, 2019</h3>
             <a href="#" class="title">HTML 5 Notes For Professional</a>
             <p>HTML (Hypertext Markup Language) uses a markup system composed of elements which represent specific content. Markup means that with HTML you declare what is ...</p>
-            <a href="/spy/html5.html" class="btn">read more</a>
+            <a href="/spy/html5notes.html" class="btn">read more</a>
           </div>
         </div>
 </div>
