--- a/html5notes.html
+++ b/html5notes.html
@@ -33,7 +33,7 @@
 <div class="container mt-5">
   <h2>HTML 5 Notes For Professional </h2>
   
-<p class="para">Download free course HTML5 Notes for Professionals book, pdf ebook tutorials on 124 by <a href="https://books.goalkicker.com/HTML5Book/" style="text-decoration: none;">GoalKicker.com</p>
+<p class="para">Download free course HTML5 Notes for Professionals book, pdf ebook tutorials on 124 by <a href="https://books.goalkicker.com/HTML5Book/" style="text-decoration: none;">GoalKicker.com</a></p>
 <img src="/spy/html5.png" class="img-fluid" alt="...">
   <ol class="list-group list-group">
   <li class="list-group-item d-flex justify-content-between align-items-start">
